[gd_scene load_steps=3 format=3 uid="uid://c77khs64qwlu4"]

[ext_resource type="Script" path="res://Scripts/menu_principal.gd" id="1_u0ne7"]
[ext_resource type="AudioStream" uid="uid://bc52ae5qpiq55" path="res://Sounds/button_09-190435.mp3" id="2_0qk8b"]

[node name="Menu_principal" type="Node2D"]
script = ExtResource("1_u0ne7")

[node name="Créditos" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 300.0
offset_right = 73.0
offset_bottom = 331.0
grow_vertical = 2
scale = Vector2(3, 3)
text = "Credits"
metadata/_edit_use_anchors_ = true

[node name="Instrucciones" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 160.0
offset_right = 111.0
offset_bottom = 191.0
grow_vertical = 2
scale = Vector2(3, 3)
text = "Instructions
"
metadata/_edit_use_anchors_ = true

[node name="Jugar" type="Button" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = 10.0
offset_right = 51.0
offset_bottom = 41.0
grow_vertical = 2
scale = Vector2(3, 3)
text = "Play"
metadata/_edit_use_anchors_ = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0qk8b")

[connection signal="pressed" from="Créditos" to="." method="_on_créditos_pressed"]
[connection signal="pressed" from="Instrucciones" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="Jugar" to="." method="_on_button_pressed"]
